change swagger routes
